# HexTwitch

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  hex.patch  patch.sh
benches/: benches_irc.rs
src/: api.rs  icons.rs  irc.rs  lib.rs  macros.rs  plugin.rs
src/ht_core/: callbacks.rs  events.rs  irc.rs  ircv3.rs  lib.rs  messaging.rs  mod.rs  printing.rs  storage.rs  tabs.rs
src/ht_core/output/: channels.rs  mod.rs  prediction.rs  printing.rs  statics.rs  tabs.rs
src/plugin/: hooks.rs  mod.rs
src/plugin/menu/: items.rs  mod.rs  setup.rs
src/prefs/: migrations.rs  mod.rs  pref_trait.rs  pref_types.rs  reward.rs
twitchapi/: Cargo.toml
twitchapi/src/: data.rs  http.rs  implicit.rs  lib.rs  token.rs  url.rs
twitchapi/src/data/: stream.rs  tag.rs  user.rs
twitchapi/src/html/: error.html  final.html  redir.html
