[package]
name = "hextwitch"
description = "HexChat plugin for Twitch integration over IRC"
version = "1.15.0-a9"
authors = ["Yaulendil"]
repository = "https://github.com/yaulendil/hextwitch"
edition = "2021"
readme = "README.md"
keywords = ["hexchat", "xchat", "twitch", "irc", "plugin"]
license = "GPL-3.0"


[dependencies]
cached = "0.19.0"
chrono = "0.4"
hexchat = { git = "https://github.com/yaulendil/hexchat-rs" }
parking_lot = "0.11"


[lib]
name = "hextwitch"
crate-type = ["cdylib", "rlib"]


[features]
default = ["fake-joins", "fake-modes"]

fake-joins = []
fake-modes = []
full-debug = []
nightly = []
strict-reward-uuids = []


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
