[package]
name = "hextwitch"
description = "HexChat plugin for Twitch integration over IRC"
version = "1.15.0-b1"
authors = ["Yaulendil"]
repository = "https://github.com/yaulendil/hextwitch"
edition = "2021"
readme = "README.md"
keywords = ["hexchat", "xchat", "twitch", "irc", "plugin"]
license = "GPL-3.0"


[lib]
name = "hextwitch"
crate-type = ["cdylib", "rlib"]


[dependencies]
cached = "0.19.0"
chrono = "0.4"
hexchat = { git = "https://github.com/yaulendil/hexchat-rs" }
parking_lot = "0.11"


[features]
default = ["fake-joins", "fake-modes"]

fake-joins = []
fake-modes = []
full-debug = []
nightly = []
strict-reward-uuids = []


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
