[package]
name = "twitchapi"
version = "0.1.0"
edition = "2021"


[dependencies]
const_format = { version = "0.2.24", features = ["const_generics"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.37"

[dependencies.oauth2]
version = "4.2.0"
default-features = false
features = ["ureq"]
